--- a/blogPessoal/package.json
+++ b/blogPessoal/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "js": "^0.1.0",
+    "ngx-order-pipe": "^2.1.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
